2007-07-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/prepared_statement.hxx:
  - Exported prepared_def, thanks Daniel Frey
2007-06-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/trigger.hxx:
  - Fixed wrong doxygen tag
2007-06-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/Makefile.am:
  - Added notify-listen headers
 tools/preprelease:
  - Print errors to stderr
2007-06-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx, libpqxx.spec.in, NEWS, README:
  - The thaiopensource.org hostname no longer works; it's now pqxx.org
2007-05-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx:
  - Fixed some raw HTML that was showing up wrong in docs, thanks Trigve Siver
2007-05-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Added some warning options for g++ 4.2.0
 doc/libpqxx.xml, include/pqxx/connection_base.hxx, include/pqxx/pqx,
 src/connection_base.cxx, test/test004.cxx, test/test023.cxx,
 test/test078.cxx, test/test079.cxx, test/test087.cxx:
  - Renamed trigger to notify_listener
 include/pqxx/notify-listen, include/pqxx/notify-listen.hxx:
  - New
 include/pqxx/trigger, include/pqxx/trigger.hxx:
  - Marked as obsolete
 VERSION:
  - Proceeding to 3.0.0
2007-05-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx:
  - More explanation, particularly on exceptions.  Thanks Gary Jefferson.
2007-05-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection.cxx:
  - Pass on more error messages in broken_connection exceptions, thanks JuJu
2007-05-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Removed unnecessary retrieval of error message, thanks JuJu
  - Moved code around a bit
2007-05-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/compiler-public.hxx, win32/INSTALL.txt:
  - Define PQXX_PQ_STATIC to link to static libpq in Windows.  Thanks JuJu.
2007-05-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/robusttransaction.cxx: